--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
 </head>
 
 <body>
-    
+    <!-- header -->
+    <header class="header-1 pt-2 pb-2">
+        <div class="marquee w-100">
+            <div class="d-flex align-items-center gap-5">
+                <p class="h-text m-0 mx-3">S&P <span class="border-red">-1.01%</span></p>
+                <p class="h-text m-0 mx-3">Shanghai <span class="border-y">+0.87%</span></p>
+                <p class="h-text m-0 mx-3">FTSE 100 <span class="border-y">+0.13%</span></p>
+                <p class="h-text m-0 mx-3">ASD 100 <span class="border-y">+0.13%</span></p>
+                <p class="h-text m-0 mx-3">Brent Crude Oil <span class="border-red">-0.24%</span></p>
+                <p class="h-text m-0 mx-3">DSC <span class="border-red">-0.24%</span></p>
+                <p class="h-text m-0 mx-3">AXD 100 <span class="border-y">+0.13%</span></p>
+                <p class="h-text m-0 mx-3">Euro/Doller <span class="border-y">+0.03%</span></p>
+            </div>
+        </div>
+    </header>
 
 
 
