--- a/index.html
+++ b/index.html
@@ -93,7 +93,157 @@
         </div>
     </section>
 
+    <!-- section-3 -->
+    <section class="">
+        <div class="container">
+            <h1 class="sect-3-head">THE HUSTLIN’ HARDOS.</h1>
+        </div>
+        <div class="boderrr">
+            <img src="./assets/images/sect-2nd-bg.png" alt="" class="w-100">
+        </div>
+    </section>
 
+    <!-- section-4 -->
+    <section class="py-5">
+        <div class="container my-5">
+            <h1 class="m-0 news text-center p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most anticipated NFT
+                project of 2022"</h1>
+        </div>
+    </section>
+
+    <!-- section-5 -->
+    <section class="outline-black">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-12 outline-black">
+                    <div class="d-flex flex-column justify-content-center w-100 h-100 p-3 pl-43">
+                        <h3 class="news-title mb-0">March 1, 2022 by Editor Hardo</h3>
+                        <p class="news-head mt-16 mb-0">
+                            Hustlin' Hardos is a collection of 9,999 NFT characters on the Ethereum Blockchain,
+                            inspired
+                            by the business/finance
+                            world, hustler culture and web3 aesthetics.
+
+                            Each Hustlin' Hardo is a completely original and unique combination of hundreds of
+                            potential
+                            attributes such as luxury
+                            watches, clothing, or accessories - all with provable degrees of rarity. The collection
+                            features truly unique and
+                            powerful artwork, while offering its holders first-of-its-kind utility. Your Huslin’
+                            Hardo
+                            NFT is your gateway to The
+                            Boardroom, one of the most rewarding and engaging online communities
+                        </p>
+                        <a href="" class="news-title text-decoration-underline mb-0 mt-16">Read More...</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12 p-0 outline-black">
+                    <img src="./assets/images/lazy-man-img.png" alt="img1" class="w-100">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- section-6 -->
+    <section class="py-5 bordr br-top">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between">
+                <h2 class="break">Latest Tweets</h2>
+                <div class="d-flex align-items-center gap-5">
+                    <div class="prev c-p">
+                        <svg width="23" height="40" viewBox="0 0 23 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21 2L3 20L21 38" stroke="black" stroke-width="4" />
+                        </svg>
+                    </div>
+                    <div class="next c-p">
+                        <svg width="23" height="40" viewBox="0 0 23 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2 2L20 20L2 38" stroke="black" stroke-width="4" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- section-7 -->
+    <section>
+        <div class="container">
+            <div class="parentslider d-flex align-items-center justify-content-center">
+                <div class="childslider d-flex justify-content-center flex-column bordr1  w-100">
+                    <h2 class="etam">Etiam eget</h2>
+                    <div class="d-flex align-items-center gap-2">
+                        <span>
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
+                                    fill="#55ACEE" />
+                            </svg>
+                        </span>
+                        <p class="two p-0 m-0">23/02/2022</p>
+                    </div>
+                    <p class="diam mt-2">Diam tellus arcu, amet ornare nulla ut scelerisque et. Cum porta ultrices quam
+                        in.
+                    </p>
+                    <a href="" class="read">Read More...</a>
+                </div>
+                <div class="childslider d-flex justify-content-center flex-column bordr1 br-lft w-100">
+                    <h2 class="etam">Etiam eget</h2>
+                    <div class="d-flex align-items-center gap-2">
+                        <span>
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
+                                    fill="#55ACEE" />
+                            </svg>
+                        </span>
+                        <p class="two p-0 m-0">23/02/2022</p>
+                    </div>
+                    <p class="diam mt-2">Diam tellus arcu, amet ornare nulla ut scelerisque et. Cum porta ultrices quam
+                        in.
+                    </p>
+                    <a href="" class="read">Read More...</a>
+                </div>
+                <div class="childslider d-flex justify-content-center flex-column bordr1 br-lft w-100">
+                    <h2 class="etam">Etiam eget</h2>
+                    <div class="d-flex align-items-center gap-2">
+                        <span>
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
+                                    fill="#55ACEE" />
+                            </svg>
+                        </span>
+                        <p class="two p-0 m-0">23/02/2022</p>
+                    </div>
+                    <p class="diam mt-2">Diam tellus arcu, amet ornare nulla ut scelerisque et. Cum porta ultrices quam
+                        in.
+                    </p>
+                    <a href="" class="read">Read More...</a>
+                </div>
+                <div class="childslider d-flex justify-content-center flex-column brdr1 br-lft w-100">
+                    <h2 class="etam">Etiam eget</h2>
+                    <div class="d-flex align-items-center gap-2">
+                        <span>
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
+                                    fill="#55ACEE" />
+                            </svg>
+                        </span>
+                        <p class="two p-0 m-0">23/02/2022</p>
+                    </div>
+                    <p class="diam mt-2">Diam tellus arcu, amet ornare nulla ut scelerisque et. Cum porta ultrices quam
+                        in.
+                    </p>
+                    <a href="" class="read">Read More...</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
