--- a/index.html
+++ b/index.html
@@ -249,8 +249,13 @@
     <section class="outline-black">
         <div class="container pt-3 pb-3">
             <h3 class="minting">Minting</h3>
+        </div>
+    </section>
+    <!-- section-9 -->
+    <section class="">
+        <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-12 outline-black d-flex flex-column justify-content-center">
+                <div class="col-lg-6 col-12 img-border  d-flex flex-column justify-content-center">
                     <div class="p-3">
                         <p class="news-title  max-w-438">
                             Most of the Hustlin’ Hardos first experienced NFTs via other successful projects like
@@ -271,13 +276,13 @@
                             <span class="d-flex align-items-center text-e number">100</span>
                             <button class="btn-add text-e">+</button>
                         </div>
-                        <button class="text-e font-s-14 btn-mint mt-5 mb-1">Mint NOW</button>
-                        <h5 class="text-e font-s-18 color-green mb-0 mt-4">Time Left</h5>
-                        <p class="text-e color-red" id="time-1">40:15:12:10</p>
+                        <button class="mint-now btn-mint mt-5 mb-1">Mint NOW</button>
+                        <h5 class="left color-green mb-0 mt-4">Time Left</h5>
+                        <p class="timer color-red" id="time-1">40:15:12:10</p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 p-0 outline-black">
-                    <img src="./assets/images/lazy-man-img.png" alt="img220" class="w-100 h-100">
+                <div class="col-lg-6 col-12 p-0 img-border2">
+                    <img src="./assets/images/lazy-man-img.png" alt="img220" class="w-100 ">
                 </div>
             </div>
         </div>
