--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <section class="">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-12 img-border  d-flex flex-column justify-content-center">
+                <div class="col-lg-6 col-12 border-left  d-flex flex-column justify-content-center">
                     <div class="p-3">
                         <p class="news-title  max-w-438">
                             Most of the Hustlin’ Hardos first experienced NFTs via other successful projects like
@@ -287,6 +287,36 @@
             </div>
         </div>
     </section>
+
+    <!-- section-10 -->
+    <section class="border-top">
+        <div class="container">
+            <div class="d-flex justify-content-md-center justify-content-between overflow-x-auto py-3">
+                <div class="text-box6">
+                    <p class="sec-6-font1">Etiam eget</p>
+                    <p class="m-0 sec-6-font2">42</p>
+                </div>
+                <div class="text-box6">
+                    <p class="sec-6-font1">Tristique.</p>
+                    <p class="m-0 sec-6-font2">42</p>
+                </div>
+                <div class="text-box6">
+                    <p class="sec-6-font1">Aliquet ac.</p>
+                    <p class="m-0 sec-6-font2">42</p>
+                </div>
+                <div class="text-box6">
+                    <p class="sec-6-font1">Tincidunt.</p>
+                    <p class="m-0 sec-6-font2">42</p>
+                </div>
+            </div>
+        </div>
+        <div class="heading6 border-bottom border-top">
+            <div class="container">
+                <h2 class="roadmap-head sm-py-40 py-20 m-0" id="RoadMap">RoadMap</h2>
+            </div>
+        </div>
+    </section>
+
 
 
 
