--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
     <section class="py-5 bordr br-top">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
-                <h2 class="break">Latest Tweets</h2>
+                <h2 class="latest">Latest Tweets</h2>
                 <div class="d-flex align-items-center gap-5">
-                    <div class="prev c-p">
+                    <div class="previous c-p">
                         <svg width="23" height="40" viewBox="0 0 23 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M21 2L3 20L21 38" stroke="black" stroke-width="4" />
                         </svg>
                     </div>
-                    <div class="next c-p">
+                    <div class="next2 c-p">
                         <svg width="23" height="40" viewBox="0 0 23 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2 2L20 20L2 38" stroke="black" stroke-width="4" />
                         </svg>
@@ -247,7 +247,7 @@
 
     <!-- section-8 -->
     <section class="outline-black">
-        <div class="container pt-3 pb-3">
+        <div class="container pt-5 pb-5">
             <h3 class="minting">Minting</h3>
         </div>
     </section>
@@ -312,12 +312,12 @@
         </div>
         <div class="heading6 border-bottom border-top">
             <div class="container">
-                <h2 class="roadmap-head sm-py-40 py-20 m-0" id="RoadMap">RoadMap</h2>
+                <h2 class="roadmap-head  py-88 m-0" id="RoadMap">RoadMap</h2>
             </div>
         </div>
     </section>
 
-    <!-- section-7 (timeline) -->
+    <!-- section-11 (timeline) -->
     <section class="border-bottom">
         <div class="container border-left border-right">
             <div class="timeline">
@@ -433,16 +433,40 @@
                     </div>
                 </div>
                 <div class="arrow_timeline">
-                    <span><a href="">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-                                <path
-                                    d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
-                            </svg>
-                        </a></span>
+                    <img src="./assets/images/down-arrow.png" alt="arrow-img" class="w-100">
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- section-12 -->
+    <section class="py-5 bordr2 br-top border-bottom">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between">
+                <h2 class="team">TEAM</h2>
+                <div class="d-flex align-items-center gap-5">
+                    <div class="prev c-p">
+                        <svg width="23" height="40" viewBox="0 0 23 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21 2L3 20L21 38" stroke="black" stroke-width="4" />
+                        </svg>
+                    </div>
+                    <div class="next c-p">
+                        <svg width="23" height="40" viewBox="0 0 23 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2 2L20 20L2 38" stroke="black" stroke-width="4" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+   
+
+
+    
+
+
 
 
 
