slider-2 section complete

--- a/index.html
+++ b/index.html
@@ -461,7 +461,50 @@
     </section>
 
 
-   
+    <!-- section-13 slider-2 -->
+    <section class="">
+        <div class="container">
+            <div class="parentslider2">
+                <div class="childslider2 border-lrp  ">
+                    <div class="d-flex align-items-center justify-content-center  flex-column">
+                        <img src="./assets/images/SVG/lazy.svg" alt="" class="">
+                        <p class="m-0 diam-pera2 mt-2">Executive Hardo</p>
+                        <p class="crypto mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
+                            MBB
+                            Consultant,</p>
+
+                    </div>
+
+                </div>
+                <div class="childslider2 border-lrp  ">
+                    <div class="d-flex align-items-center justify-content-center  flex-column">
+                        <img src="./assets/images/SVG/lazy.svg" alt="" class="">
+                        <p class="m-0 diam-pera2 mt-2">Executive Hardo</p>
+                        <p class="crypyo-text mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
+                            MBB
+                            Consultant,</p>
+
+                    </div>
+
+                </div>
+                <div class="childslider2 border-lrp  ">
+                    <div class="d-flex align-items-center justify-content-center  flex-column">
+                        <img src="./assets/images/SVG/lazy.svg" alt="" class="">
+                        <p class="m-0 diam-pera2 mt-2">Executive Hardo</p>
+                        <p class="crypyo-text mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
+                            MBB
+                            Consultant,</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--  -->
+    
 
 
     
