FAQs head section update

--- a/index.html
+++ b/index.html
@@ -504,7 +504,11 @@
     </section>
 
     <!--  -->
-    
+    <section class="boderrr">
+        <div class="container">
+            <h2 class="FAQs sm-py-40 py-20 m-0" id="FAQs">FAQs</h2>
+        </div>
+    </section>
 
 
     
