--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <!-- section-1 -->
-    <section>
+    <section class="d-non">
         <div class="container py-3">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="w-25"></div>
@@ -79,24 +79,30 @@
     </section>
 
     <!-- section-2 -->
-    <section class="bordr">
+    <section class="outline-black d-non">
         <div class="container">
-            <div class="">
-                <ul class="d-flex align-items-center justify-content-center nav-bar m-0 p-0 collapse1">
-                    <li class="bordr1 "><a href="" class="about">About us</a></li>
-                    <li class="bordr1 br-lft"><a href="" class="about">Team</a></li>
-                    <li class="bordr1 br-lft"><a href="" class="about">Roadmap</a></li>
-                    <li class="bordr1 br-lft"><a href="" class="about">Minting</a></li>
-                    <li class="bordr1 br-lft"><a href="" class="about">FAQs</a></li>
-                </ul>
+            <div id="menuicon">
+                <span class="line line-1"></span>
+                <span class="line line-2"></span>
+                <span class="line line-3"></span>
             </div>
+            <nav class="d-flex justify-content-center align-items-center menulist">
+                <ul class="d-flex justify-content-center align-items-center m-0 p-0">
+                    <li class="p-10 px-5 outline-black1"><a href="" class="navbar-iteams">About us</a></li>
+                    <li class="p-10 px-5"><a href="" class="navbar-iteams">Minting</a></li>
+                    <li class="p-10 px-5 outline-black1"><a href="" class="navbar-iteams">Roadmap</a></li>
+                    <li class="p-10 px-5"><a href="" class="navbar-iteams">Team</a></li>
+                    <li class="p-10 px-5 outline-black1"><a href="" class="navbar-iteams">FAQs</a></li>
+                    <li><button class="connect-wallet-btn d-lg-none">Connect Wallet</button></li>
+                </ul>
+            </nav>
         </div>
     </section>
 
     <!-- section-3 -->
     <section class="">
         <div class="container">
-            <h1 class="sect-3-head">THE HUSTLIN’ HARDOS.</h1>
+            <h1 class="sect-3-head lh-101">THE HUSTLIN’ HARDOS.</h1>
         </div>
         <div class="boderrr">
             <img src="./assets/images/sect-2nd-bg.png" alt="" class="w-100">
@@ -104,7 +110,7 @@
     </section>
 
     <!-- section-4 -->
-    <section class="py-5">
+    <section class="py-5 d-non">
         <div class="container my-5">
             <h1 class="m-0 news text-center p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most anticipated NFT
                 project of 2022"</h1>
@@ -112,7 +118,7 @@
     </section>
 
     <!-- section-5 -->
-    <section class="outline-black">
+    <section class="outline-black d-non">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 outline-black">
@@ -145,7 +151,7 @@
     </section>
 
     <!-- section-6 -->
-    <section class="py-5 bordr br-top">
+    <section class="py-5 bordr br-top d-non">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
                 <h2 class="latest">Latest Tweets</h2>
@@ -166,7 +172,7 @@
     </section>
 
     <!-- section-7 -->
-    <section>
+    <section class="d-non">
         <div class="container">
             <div class="parentslider d-flex align-items-center justify-content-center">
                 <div class="childslider d-flex justify-content-center flex-column bordr1  w-100">
@@ -246,13 +252,13 @@
     </section>
 
     <!-- section-8 -->
-    <section class="outline-black">
+    <section class="outline-black d-non">
         <div class="container pt-5 pb-5">
             <h3 class="minting">Minting</h3>
         </div>
     </section>
     <!-- section-9 -->
-    <section class="">
+    <section class="d-none d-non">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 border-left  d-flex flex-column justify-content-center">
@@ -289,7 +295,7 @@
     </section>
 
     <!-- section-10 -->
-    <section class="border-top">
+    <section class="border-top d-non">
         <div class="container">
             <div class="d-flex justify-content-md-center justify-content-between overflow-x-auto py-3">
                 <div class="text-box6">
@@ -318,7 +324,7 @@
     </section>
 
     <!-- section-11 (timeline) -->
-    <section class="border-bottom">
+    <section class="border-bottom d-non">
         <div class="container border-left border-right">
             <div class="timeline">
                 <div class="timeline-box-right">
@@ -440,7 +446,7 @@
     </section>
 
     <!-- section-12 -->
-    <section class="py-5 bordr2 br-top border-bottom">
+    <section class="py-5 bordr2 br-top border-bottom d-non">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
                 <h2 class="team">TEAM</h2>
@@ -462,7 +468,7 @@
 
 
     <!-- section-13 slider-2 -->
-    <section class="">
+    <section class="d-non">
         <div class="container">
             <div class="parentslider2">
                 <div class="childslider2 border-lrp  ">
@@ -504,19 +510,168 @@
     </section>
 
     <!--  -->
-    <section class="boderrr">
+    <section class="boderrr d-non">
         <div class="container">
             <h2 class="FAQs sm-py-40 py-20 m-0" id="FAQs">FAQs</h2>
         </div>
     </section>
 
 
-    
-
-
-
-
-
+    <!-- section-14 accordian -->
+    <section class="d-non">
+        <div class="border-top border-bottom">
+            <div class="container border-left border-right pe-0 ps-0">
+                <div class="accordion">
+                    <div class="accordion-box border-bottom">
+                        <div class="accordion_btn position-relative ">
+                            <p class="accordion_btn_font m-0">What is an NFT?</p>
+                            <p class="accordion_btn_font accordion_sign position-absolute p-0">-</p>
+                        </div>
+                        <div class="accordion_para ">
+                            <p class="accordion-font1 m-0">NFT stands for “Non-fungible token,” which means that it’s a
+                                unique,
+                                digital item with
+                                blockchain-managed ownership that
+                                users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                                they can also offer additional
+                                benefits like exclusive access to websites, event tickets, game items, and ownership
+                                records
+                                for physical objects. Think
+                                of it as a unique piece of art that can also work as a “members-only” card. Hustlin'
+                                Hardos
+                                works like this</p>
+                        </div>
+                    </div>
+                    <div class="accordion-box border-bottom ">
+                        <div class="accordion_btn position-relative ">
+                            <p class="accordion_btn_font m-0">How do I get an NFT?</p>
+                            <p class="accordion_btn_font accordion_sign position-absolute p-0">+</p>
+                        </div>
+                        <div class="accordion_para ">
+                            <p class="accordion-font1 m-0">NFT stands for “Non-fungible token,” which means that it’s a
+                                unique,
+                                digital item with
+                                blockchain-managed ownership that
+                                users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                                they can also offer additional
+                                benefits like exclusive access to websites, event tickets, game items, and ownership
+                                records
+                                for physical objects. Think
+                                of it as a unique piece of art that can also work as a “members-only” card. Hustlin'
+                                Hardos
+                                works like this</p>
+                        </div>
+                    </div>
+                    <div class="accordion-box border-bottom ">
+                        <div class="accordion_btn position-relative ">
+                            <p class="accordion_btn_font m-0">How much is a Hustlin' Hardo NFT?</p>
+                            <p class="accordion_btn_font accordion_sign position-absolute p-0">+</p>
+                        </div>
+                        <div class="accordion_para ">
+                            <p class="accordion-font1 m-0">NFT stands for “Non-fungible token,” which means that it’s a
+                                unique,
+                                digital item with
+                                blockchain-managed ownership that
+                                users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                                they can also offer additional
+                                benefits like exclusive access to websites, event tickets, game items, and ownership
+                                records
+                                for physical objects. Think
+                                of it as a unique piece of art that can also work as a “members-only” card. Hustlin'
+                                Hardos
+                                works like this</p>
+                        </div>
+                    </div>
+                    <div class="accordion-box border-bottom ">
+                        <div class="accordion_btn position-relative ">
+                            <p class="accordion_btn_font m-0">Where can I mint a Hustlin' Hardos NFT?</p>
+                            <p class="accordion_btn_font accordion_sign position-absolute p-0">+</p>
+                        </div>
+                        <div class="accordion_para ">
+                            <p class="accordion-font1 m-0">NFT stands for “Non-fungible token,” which means that it’s a
+                                unique,
+                                digital item with
+                                blockchain-managed ownership that
+                                users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                                they can also offer additional
+                                benefits like exclusive access to websites, event tickets, game items, and ownership
+                                records
+                                for physical objects. Think
+                                of it as a unique piece of art that can also work as a “members-only” card. Hustlin'
+                                Hardos
+                                works like this</p>
+                        </div>
+                    </div>
+                    <div class="accordion-box border-bottom ">
+                        <div class="accordion_btn position-relative ">
+                            <p class="accordion_btn_font m-0">How do I mint a Hustlin' Hardo NFT?</p>
+                            <p class="accordion_btn_font accordion_sign position-absolute p-0">+</p>
+                        </div>
+                        <div class="accordion_para ">
+                            <p class="accordion-font1 m-0">NFT stands for “Non-fungible token,” which means that it’s a
+                                unique,
+                                digital item with
+                                blockchain-managed ownership that
+                                users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                                they can also offer additional
+                                benefits like exclusive access to websites, event tickets, game items, and ownership
+                                records
+                                for physical objects. Think
+                                of it as a unique piece of art that can also work as a “members-only” card. Hustlin'
+                                Hardos
+                                works like this</p>
+                        </div>
+                    </div>
+                    <div class="accordion-box border-bottom ">
+                        <div class="accordion_btn position-relative ">
+                            <p class="accordion_btn_font m-0">How many Hustlin' Hardos NFTs will there be?</p>
+                            <p class="accordion_btn_font accordion_sign position-absolute p-0">+</p>
+                        </div>
+                        <div class="accordion_para ">
+                            <p class="accordion-font1 m-0">NFT stands for “Non-fungible token,” which means that it’s a
+                                unique,
+                                digital item with
+                                blockchain-managed ownership that
+                                users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                                they can also offer additional
+                                benefits like exclusive access to websites, event tickets, game items, and ownership
+                                records
+                                for physical objects. Think
+                                of it as a unique piece of art that can also work as a “members-only” card. Hustlin'
+                                Hardos
+                                works like this</p>
+                        </div>
+                    </div>
+                    <div class="accordion-box ">
+                        <div class="accordion_btn position-relative ">
+                            <p class="accordion_btn_font m-0 lg-max-width-unset md-max-width-700 ">What is the utility
+                                and functionality of a Hustlin' Hardo
+                                NFT?
+                            </p>
+                            <p class="accordion_btn_font accordion_sign position-absolute p-0">+</p>
+                        </div>
+                        <div class="accordion_para ">
+                            <p class="accordion-font1 m-0">NFT stands for “Non-fungible token,” which means that it’s a
+                                unique,
+                                digital item with
+                                blockchain-managed ownership that
+                                users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                                they can also offer additional
+                                benefits like exclusive access to websites, event tickets, game items, and ownership
+                                records
+                                for physical objects. Think
+                                of it as a unique piece of art that can also work as a “members-only” card. Hustlin'
+                                Hardos
+                                works like this</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-grid align-items-center justify-content-center">
+            <p class="copyright m-0 py-3">© Hustlin' Hardos 2022</p>
+        </div>
+    </section>
 
 
 
