nav-bar responsive done

--- a/index.html
+++ b/index.html
@@ -35,51 +35,39 @@
     </header>
 
     <!-- section-1 -->
-    <section class="d-non">
-        <div class="container py-3">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="w-25"></div>
-                <h2 class="m-0 hustlin-head justify-content-around d-flex"> Hustlin' Hardos</h2>
-
-                <div class="d-flex gap-18 align-items-center">
-                    <div>
-                        <a href="">
-                            <img src="./assets/images/SVG/discord.svg" alt="discord-img">
-                        </a>
-                    </div>
-
-                    <div>
-                        <a href="">
-                            <img src="./assets/images/SVG/twitter.svg" alt="discord-img">
-                        </a>
-                    </div>
-
-                    <div>
-                        <a href="">
-                            <img src="./assets/images/SVG/insta.svg" alt="discord-img">
-                        </a>
-                    </div>
-
-                    <div>
-                        <a href="">
-                            <img src="./assets/images/SVG/marvel.svg" alt="discord-img">
-                        </a>
-                    </div>
-
-                    <div>
-                        <a href="">
-                            <img src="./assets/images/SVG/boat.svg" alt="discord-img">
-                        </a>
-                    </div>
-
-                    <button class="walletbox">Connect Wallet</button>
+    <section class="">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center pt-2 pb-2 position-relative">
+                <div class="d-flex justify-content-between align-items-center w-100">
+                    <h2 class="hustlin-hardos m-0 ">Hustlin' Hardos</h2>
+                </div>
+                <div
+                    class="d-flex gap-3 align-items-center justify-content-center mt-4 mt-lg-0 w-100 justify-content-lg-end">
+                    <a href="https://discord.com/" target="_blank" class="icon-apps">
+                        <img src="./assets/images/SVG/discord.svg" alt="">
+                    </a>
+                    <a href="https://x.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJteCI6IjIifQ%3D%3D%22%7D"
+                        target="_blank" class="icon-apps">
+                        <img src="./assets/images/SVG/twitter.svg" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank" class="icon-apps">
+                        <img src="./assets/images/SVG/insta.svg" alt="">
+                    </a>
+                    <a href="#" class="icon-apps">
+                        <img src="./assets/images/SVG/marvel.svg" alt="">
+                    </a>
+                    <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/42162871679396325415169552414393097269174799828774006840691977428301126828033"
+                        target="_blank" class="icon-apps">
+                        <img src="./assets/images/SVG/boat.svg" alt="">
+                    </a>
+                    <button class="walletbox d-none d-lg-block">Connect Wallet</button>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- section-2 -->
-    <section class="outline-black d-non">
+    <section class="outline-black">
         <div class="container">
             <div id="menuicon">
                 <span class="line line-1"></span>
@@ -93,7 +81,7 @@
                     <li class="p-10 px-5 outline-black1"><a href="" class="navbar-iteams">Roadmap</a></li>
                     <li class="p-10 px-5"><a href="" class="navbar-iteams">Team</a></li>
                     <li class="p-10 px-5 outline-black1"><a href="" class="navbar-iteams">FAQs</a></li>
-                    <li><button class="connect-wallet-btn d-lg-none">Connect Wallet</button></li>
+                    <li><button class="walletbox d-lg-none">Connect Wallet</button></li>
                 </ul>
             </nav>
         </div>
@@ -258,7 +246,7 @@
         </div>
     </section>
     <!-- section-9 -->
-    <section class="d-none d-non">
+    <section class="d-non">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 border-left  d-flex flex-column justify-content-center">
