--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <!-- section-4 -->
     <section class="py-5 d-non">
         <div class="container my-5">
-            <h1 class="m-0 news text-center p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most anticipated NFT
+            <h1 class="m-0 news text-center lh-85 p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most anticipated NFT
                 project of 2022"</h1>
         </div>
     </section>
