section-6 responsive done

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <!-- section-6 -->
     <section class="py-5 bordr br-top d-non">
         <div class="container">
-            <div class="d-flex align-items-center justify-content-between">
+            <div class="d-flex flex-clmn align-items-center justify-content-between">
                 <h2 class="latest">Latest Tweets</h2>
                 <div class="d-flex align-items-center gap-5">
                     <div class="previous c-p">
