section-7 responsive done

--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
     </section>
 
     <!-- section-8 -->
-    <section class="outline-black d-non">
+    <section class="outline-black d-none">
         <div class="container pt-5 pb-5">
             <h3 class="minting">Minting</h3>
         </div>
     </section>
     <!-- section-9 -->
-    <section class="d-non">
+    <section class="d-none">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 border-left  d-flex flex-column justify-content-center">
@@ -283,7 +283,7 @@
     </section>
 
     <!-- section-10 -->
-    <section class="border-top d-non">
+    <section class="border-top d-none">
         <div class="container">
             <div class="d-flex justify-content-md-center justify-content-between overflow-x-auto py-3">
                 <div class="text-box6">
@@ -312,7 +312,7 @@
     </section>
 
     <!-- section-11 (timeline) -->
-    <section class="border-bottom d-non">
+    <section class="border-bottom d-none">
         <div class="container border-left border-right">
             <div class="timeline">
                 <div class="timeline-box-right">
@@ -434,7 +434,7 @@
     </section>
 
     <!-- section-12 -->
-    <section class="py-5 bordr2 br-top border-bottom d-non">
+    <section class="py-5 bordr2 br-top border-bottom d-none">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
                 <h2 class="team">TEAM</h2>
@@ -456,7 +456,7 @@
 
 
     <!-- section-13 slider-2 -->
-    <section class="d-non">
+    <section class="d-none">
         <div class="container">
             <div class="parentslider2">
                 <div class="childslider2 border-lrp  ">
@@ -498,7 +498,7 @@
     </section>
 
     <!--  -->
-    <section class="boderrr d-non">
+    <section class="boderrr d-none">
         <div class="container">
             <h2 class="FAQs sm-py-40 py-20 m-0" id="FAQs">FAQs</h2>
         </div>
@@ -506,7 +506,7 @@
 
 
     <!-- section-14 accordian -->
-    <section class="d-non">
+    <section class="d-none">
         <div class="border-top border-bottom">
             <div class="container border-left border-right pe-0 ps-0">
                 <div class="accordion">
