--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- section-3 -->
     <section class="">
         <div class="container">
-            <h1 class="sect-3-head lh-101">THE HUSTLIN’ HARDOS.</h1>
+            <h1 class="sect-3-head fs-101 lh-140">THE HUSTLIN’ HARDOS.</h1>
         </div>
         <div class="boderrr">
             <img src="./assets/images/sect-2nd-bg.png" alt="" class="w-100">
@@ -100,7 +100,7 @@
     <!-- section-4 -->
     <section class="py-5 d-non">
         <div class="container my-5">
-            <h1 class="m-0 news text-center lh-85 p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most anticipated NFT
+            <h1 class="m-0 news text-center fs-32 lh-85 p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most anticipated NFT
                 project of 2022"</h1>
         </div>
     </section>
@@ -142,7 +142,7 @@
     <section class="py-5 bordr br-top d-non">
         <div class="container">
             <div class="d-flex flex-clmn align-items-center justify-content-between">
-                <h2 class="latest">Latest Tweets</h2>
+                <h2 class="latest fs-61">Latest Tweets</h2>
                 <div class="d-flex align-items-center gap-5">
                     <div class="previous c-p">
                         <svg width="23" height="40" viewBox="0 0 23 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -240,13 +240,13 @@
     </section>
 
     <!-- section-8 -->
-    <section class="outline-black d-none">
+    <section class="outline-black d-non">
         <div class="container pt-5 pb-5">
             <h3 class="minting">Minting</h3>
         </div>
     </section>
     <!-- section-9 -->
-    <section class="d-none">
+    <section class="d-non">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 border-left  d-flex flex-column justify-content-center">
@@ -283,7 +283,7 @@
     </section>
 
     <!-- section-10 -->
-    <section class="border-top d-none">
+    <section class="border-top d-non">
         <div class="container">
             <div class="d-flex justify-content-md-center justify-content-between overflow-x-auto py-3">
                 <div class="text-box6">
@@ -312,7 +312,7 @@
     </section>
 
     <!-- section-11 (timeline) -->
-    <section class="border-bottom d-none">
+    <section class="border-bottom d-non">
         <div class="container border-left border-right">
             <div class="timeline">
                 <div class="timeline-box-right">
@@ -434,7 +434,7 @@
     </section>
 
     <!-- section-12 -->
-    <section class="py-5 bordr2 br-top border-bottom d-none">
+    <section class="py-5 bordr2 br-top border-bottom d-non">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
                 <h2 class="team">TEAM</h2>
@@ -456,7 +456,7 @@
 
 
     <!-- section-13 slider-2 -->
-    <section class="d-none">
+    <section class="d-non">
         <div class="container">
             <div class="parentslider2">
                 <div class="childslider2 border-lrp  ">
@@ -498,7 +498,7 @@
     </section>
 
     <!--  -->
-    <section class="boderrr d-none">
+    <section class="boderrr d-non">
         <div class="container">
             <h2 class="FAQs sm-py-40 py-20 m-0" id="FAQs">FAQs</h2>
         </div>
@@ -506,7 +506,7 @@
 
 
     <!-- section-14 accordian -->
-    <section class="d-none">
+    <section class="d-non">
         <div class="border-top border-bottom">
             <div class="container border-left border-right pe-0 ps-0">
                 <div class="accordion">
