two section responsive done

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <a href="" class="read">Read More...</a>
                 </div>
                 <div class="childslider d-flex justify-content-center flex-column bordr1 br-lft w-100">
-                    <h2 class="etam">Etiam eget</h2>
+                    <h2 class="etam">Venenatis.</h2>
                     <div class="d-flex align-items-center gap-2">
                         <span>
                             <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
@@ -200,7 +200,7 @@
                     <a href="" class="read">Read More...</a>
                 </div>
                 <div class="childslider d-flex justify-content-center flex-column bordr1 br-lft w-100">
-                    <h2 class="etam">Etiam eget</h2>
+                    <h2 class="etam2 fs-28">Quis vulputate.</h2>
                     <div class="d-flex align-items-center gap-2">
                         <span>
                             <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
