countdown section responsive complete

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
             <h3 class="minting">Minting</h3>
         </div>
     </section>
-    <!-- section-9 -->
+    <!-- section-9 countdown -->
     <section class="d-non">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-12 border-left  d-flex flex-column justify-content-center">
+                <div class="col-lg-6 col-12 border-left border-right2  d-flex flex-column justify-content-center">
                     <div class="p-3">
                         <p class="news-title  max-w-438">
                             Most of the Hustlin’ Hardos first experienced NFTs via other successful projects like
@@ -275,7 +275,7 @@
                         <p class="timer color-red" id="time-1">40:15:12:10</p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 p-0 img-border2">
+                <div class="col-lg-6 col-12 p-0 img-border2 border-top2">
                     <img src="./assets/images/lazy-man-img.png" alt="img220" class="w-100 ">
                 </div>
             </div>
