scroll-bar responsive done

--- a/index.html
+++ b/index.html
@@ -306,13 +306,13 @@
         </div>
         <div class="heading6 border-bottom border-top">
             <div class="container">
-                <h2 class="roadmap-head  py-88 m-0" id="RoadMap">RoadMap</h2>
+                <h2 class="roadmap-head fs-67  py-88 m-0" id="RoadMap">RoadMap</h2>
             </div>
         </div>
     </section>
 
     <!-- section-11 (timeline) -->
-    <section class="border-bottom d-non">
+    <section class="border-bottom d-none">
         <div class="container border-left border-right">
             <div class="timeline">
                 <div class="timeline-box-right">
@@ -434,7 +434,7 @@
     </section>
 
     <!-- section-12 -->
-    <section class="py-5 bordr2 br-top border-bottom d-non">
+    <section class="py-5 bordr2 br-top border-bottom d-none">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
                 <h2 class="team">TEAM</h2>
@@ -456,7 +456,7 @@
 
 
     <!-- section-13 slider-2 -->
-    <section class="d-non">
+    <section class="d-none">
         <div class="container">
             <div class="parentslider2">
                 <div class="childslider2 border-lrp  ">
@@ -497,16 +497,16 @@
         </div>
     </section>
 
-    <!--  -->
-    <section class="boderrr d-non">
+    <!-- section-14 -->
+    <section class="boderrr d-none">
         <div class="container">
             <h2 class="FAQs sm-py-40 py-20 m-0" id="FAQs">FAQs</h2>
         </div>
     </section>
 
 
-    <!-- section-14 accordian -->
-    <section class="d-non">
+    <!-- section-15 accordian -->
+    <section class="d-none">
         <div class="border-top border-bottom">
             <div class="container border-left border-right pe-0 ps-0">
                 <div class="accordion">
