--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     </section>
 
     <!-- section-11 (timeline) -->
-    <section class="border-bottom d-none">
+    <section class="border-bottom d-non">
         <div class="container border-left border-right">
             <div class="timeline">
                 <div class="timeline-box-right">
@@ -434,7 +434,7 @@
     </section>
 
     <!-- section-12 -->
-    <section class="py-5 bordr2 br-top border-bottom d-none">
+    <section class="py-5 bordr2 br-top border-bottom d-non">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
                 <h2 class="team">TEAM</h2>
@@ -456,7 +456,7 @@
 
 
     <!-- section-13 slider-2 -->
-    <section class="d-none">
+    <section class="d-non">
         <div class="container">
             <div class="parentslider2">
                 <div class="childslider2 border-lrp  ">
@@ -498,7 +498,7 @@
     </section>
 
     <!-- section-14 -->
-    <section class="boderrr d-none">
+    <section class="boderrr d-non">
         <div class="container">
             <h2 class="FAQs sm-py-40 py-20 m-0" id="FAQs">FAQs</h2>
         </div>
@@ -506,7 +506,7 @@
 
 
     <!-- section-15 accordian -->
-    <section class="d-none">
+    <section class="d-non">
         <div class="border-top border-bottom">
             <div class="container border-left border-right pe-0 ps-0">
                 <div class="accordion">
