--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank" class="icon-apps">
                         <img src="./assets/images/SVG/insta.svg" alt="">
                     </a>
-                    <a href="#" class="icon-apps">
+                    <a href="https://www.myntra.com/" target="_blank" class="icon-apps">
                         <img src="./assets/images/SVG/marvel.svg" alt="">
                     </a>
-                    <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/42162871679396325415169552414393097269174799828774006840691977428301126828033"
+                    <a href="https://www.boat-lifestyle.com/collections/?utm_source=Google&utm_medium=Search&utm_campaign=SB_Search_Brand_India_Sep2020&gad_source=1&gclid=CjwKCAjwvvmzBhA2EiwAtHVrbx-1hdGNn_GeXDpa_bw5D8g5o7vJtJCeDYkyXt7DxMuPl7lHdzDGXRoCISkQAvD_BwE"
                         target="_blank" class="icon-apps">
                         <img src="./assets/images/SVG/boat.svg" alt="">
                     </a>
@@ -100,7 +100,8 @@
     <!-- section-4 -->
     <section class="py-5 d-non">
         <div class="container my-5">
-            <h1 class="m-0 news text-center fs-32 lh-85 p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most anticipated NFT
+            <h1 class="m-0 news text-center fs-32 lh-85 p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most
+                anticipated NFT
                 project of 2022"</h1>
         </div>
     </section>
@@ -161,9 +162,9 @@
 
     <!-- section-7 -->
     <section class="d-non">
-        <div class="container">
+        <div class="container p-0">
             <div class="parentslider d-flex align-items-center justify-content-center">
-                <div class="childslider d-flex justify-content-center flex-column bordr1  w-100">
+                <div class="childslider d-flex justify-content-center flex-column border-left border-right  w-100">
                     <h2 class="etam">Etiam eget</h2>
                     <div class="d-flex align-items-center gap-2">
                         <span>
@@ -181,7 +182,7 @@
                     </p>
                     <a href="" class="read">Read More...</a>
                 </div>
-                <div class="childslider d-flex justify-content-center flex-column bordr1 br-lft w-100">
+                <div class="childslider d-flex justify-content-center flex-column border-left border-right  w-100">
                     <h2 class="etam">Venenatis.</h2>
                     <div class="d-flex align-items-center gap-2">
                         <span>
@@ -199,7 +200,7 @@
                     </p>
                     <a href="" class="read">Read More...</a>
                 </div>
-                <div class="childslider d-flex justify-content-center flex-column bordr1 br-lft w-100">
+                <div class="childslider d-flex justify-content-center flex-column border-left border-right w-100">
                     <h2 class="etam2 fs-28">Quis vulputate.</h2>
                     <div class="d-flex align-items-center gap-2">
                         <span>
@@ -217,7 +218,7 @@
                     </p>
                     <a href="" class="read">Read More...</a>
                 </div>
-                <div class="childslider d-flex justify-content-center flex-column brdr1 br-lft w-100">
+                <div class="childslider d-flex justify-content-center flex-column border-left border-right  w-100">
                     <h2 class="etam">Etiam eget</h2>
                     <div class="d-flex align-items-center gap-2">
                         <span>
@@ -436,8 +437,8 @@
     <!-- section-12 -->
     <section class="py-5 bordr2 br-top border-bottom d-non">
         <div class="container">
-            <div class="d-flex align-items-center justify-content-between">
-                <h2 class="team">TEAM</h2>
+            <div class="d-flex flex-clmn align-items-center justify-content-between">
+                <h2 class="team fs-61">TEAM</h2>
                 <div class="d-flex align-items-center gap-5">
                     <div class="prev c-p">
                         <svg width="23" height="40" viewBox="0 0 23 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -462,7 +463,7 @@
                 <div class="childslider2 border-lrp  ">
                     <div class="d-flex align-items-center justify-content-center  flex-column">
                         <img src="./assets/images/SVG/lazy.svg" alt="" class="">
-                        <p class="m-0 diam-pera2 mt-2">Executive Hardo</p>
+                        <p class="m-0 diam-pera2 mt-2 fs-30">Executive Hardo</p>
                         <p class="crypto mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
                             MBB
                             Consultant,</p>
@@ -473,8 +474,8 @@
                 <div class="childslider2 border-lrp  ">
                     <div class="d-flex align-items-center justify-content-center  flex-column">
                         <img src="./assets/images/SVG/lazy.svg" alt="" class="">
-                        <p class="m-0 diam-pera2 mt-2">Executive Hardo</p>
-                        <p class="crypyo-text mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
+                        <p class="m-0 diam-pera2 mt-2 fs-28">Johnny Banjo </p>
+                        <p class="crypto mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
                             MBB
                             Consultant,</p>
 
@@ -484,8 +485,8 @@
                 <div class="childslider2 border-lrp  ">
                     <div class="d-flex align-items-center justify-content-center  flex-column">
                         <img src="./assets/images/SVG/lazy.svg" alt="" class="">
-                        <p class="m-0 diam-pera2 mt-2">Executive Hardo</p>
-                        <p class="crypyo-text mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
+                        <p class="m-0 diam-pera2 mt-2 fs-30">Executive Hardo</p>
+                        <p class="crypto mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
                             MBB
                             Consultant,</p>
 
